--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,20 +31,7 @@ a:focus {
     width: 160px;
     height: 160px;
 }
-.get_notified{
-  width: 440px;
-  height: 57px;
-  margin: auto;
-  /*margin-top: 40px;*/
-  /*float: left;*/
-  background: url(../images/buttons/button.png) left top no-repeat;
-  font-size: 26px;
-  color: #23a889;
-  text-decoration: none;
-  font-weight: 200;
-  text-align: center;
-  line-height: 54px;
-}
+
 /* //End */
 
 .btn {
@@ -454,6 +441,20 @@ select {
 .promo .overview .download-area {
   display: inline-block;
 }
+.promo .overview .get_notified{
+  width: 440px;
+  height: 57px;
+  margin: auto;
+  background: url(../images/buttons/button.png) left top no-repeat;
+  font-size: 26px;
+  color: #23a889;
+  text-decoration: none;
+  font-weight: 200;
+  text-align: center;
+  line-height: 54px;
+  display: inline-block;
+}
+
 .promo .overview .btn-group {
   margin-left: 40px;
 }
@@ -461,8 +462,7 @@ select {
   padding: 0;
   margin-bottom: 15px;
 }
-.promo .overview .btn-group li a {
-  background-color: #317b5e;
+.promo .overview .btn-group li {
   background-repeat: no-repeat;
   background-position: left top;
   -webkit-border-radius: 4px;
@@ -474,20 +474,28 @@ select {
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
   display: block;
-  width: 200px;
-  height: 60px;
+  /*width: 200px;*/
+  width: 440px;
+  height: 57px;
   text-indent: -9999px;
   margin-right: 30px;
+  /*color:#000;*/
 }
-.promo .overview .btn-group li a:hover {
+/*.promo .overview .btn-group li a:hover {
   background-color: #225742;
-}
-.promo .overview .btn-group li.ios-btn a {
+}*/
+.promo .overview .btn-group li.ios-btn {
   background-image: url('../images/buttons/btn-app-store.png');
 }
-.promo .overview .btn-group li.android-btn a {
+.promo .overview .btn-group li.android-btn {
   background-image: url('../images/buttons/btn-google-play.png');
 }
+
+.promo .overview .btn-group li.comingsoon-btn {
+  background-image: url('../images/buttons/button.png');
+  z-index:-1;
+}
+
 .promo .overview .note {
   position: relative;
   color: #317b5e;
@@ -1641,9 +1649,17 @@ select {
   .promo-landscape .overview .summary li {
     text-align: center;
   }
+  .promo .overview .get_notified{
+    width:300px;
+    background-size: 300px;
+    font-size: 18px;
+    line-height: 35px;
+  }
+
 }
+
 /* Small devices (tablets, 768px and up) */
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 991px){
   .promo .overview {
     text-align: center;
   }
